# pfinance

./: .cursorignore  .cursorrules  .firebaserc  .gitignore  ARCHITECTURE.md  BUDGET_IMPLEMENTATION.md  CLAUDE.md  DESIGN_BRIEF.md  DESIGN_SYSTEM.md  EXECUTION_PLAN.md  FIREBASE_AUTH_SETUP.md  ML_ROADMAP.md  Makefile  PRD.txt  ROADMAP.md  TODO.md  VERCEL_PROJECT_SETUP.md  VERCEL_TOKEN_SETUP.md  firebase.json  firestore.indexes.json  storage.rules
.claude/: launch.json
backend/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
docs/: PRODUCTION_DEPLOYMENT.md  VERIFICATION.md
extensions/: firestore-algolia-search.env
ml-service/: BENCHMARK_REPORT.md  Dockerfile  add_test_data.py  benchmark-history.json  benchmark-results.json  eval_runner.py  local_extractor.py  modal_app.py  modal_app_7b.py  modal_app_cheap.py  modal_client.py  modal_deploy.py  pyproject.toml  requirements.txt  test_easyocr.py  test_extraction.py  test_qwen_7b.py  test_qwen_7b_mps.py  test_qwen_vl.py
ml-service/data/receipts/: swiss_restaurant_01.json
ml-service/fine_tuning/: download_samples.py  prepare_data.py  train_lora.py
ml-service/fine_tuning/datasets/: receipt_training_data.json  train.json  val.json
ml-service/scripts/: update_benchmark_snapshot.py  validate_benchmarks.py
ml-service/src/: main.py
ml-service/src/models/: __init__.py  base.py  paddleocr.py  qwen_vl.py  qwen_vl_mlx.py
ml-service/src/prompts/: __init__.py  bank_statement.py  receipt.py
ml-service/src/schemas/: __init__.py  extraction.py
ml-service/tests/: test_extraction.py
proto/: buf.gen.debug.yaml  (+4 more)
(+567 files in other folders)
